# test-awsebcli

./: default.nix  pyproject.toml
